# ai_suite

./: .gitignore  TODO.md  amazon.csv  discussion_summary.md  herox.txt  pyproject.toml  requirements.txt  setup.py  test_jina.txt  use-cases-to-try.txt
.devcontainer/: devcontainer.json
ai_suite/app/: demo_app.py
ai_suite/data/aromo/: fragrances.csv  tokens.csv  tokens_sorted.txt
ai_suite/docs/: t  temp  why_i_stopped_using_nb.md  why_i_stopped_using_nb_o1.md  why_i_stopped_using_nb_text.md  why_i_stopped_using_nb_text_in_process.md
ai_suite/experiment/: llm_classification.py  prompt.txt  test.json  test.py  test_challenge_urls.py  test_jina.py
ai_suite/ie/agents/: agent_factory.py  base_agent.py  content_scraper_agent.py  entity_evaluators.py  exploration_orchestrator.py  extraction_agent.py  format_results_agent.py  model_generator_agent.py  save_extractions_agent.py  url_jina_discovery_agent.py
ai_suite/ie/controller/: grassroots_pipeline.py  herox_pipeline.py  pipeline_controller.py
ai_suite/ie/llm/: extract.py  llm_factory.py  llm_settings.py  prompt.txt  test_extract_model.py
ai_suite/ie/models/: challenge_models.py  grassroot_models.py  invoice_model.py  models.py  (+2 more)
ai_suite/llm_utils/: llm_factory.py
ai_suite/prompt/: entity_eval_prompt.txt  entity_eval_prompt_2.txt  entity_eval_prompt_3.txt  evaluation-showcase-claude.md  my_eval_prompt_for_claude_for_eval_system_creation.txt  prompt-evaluation-showcase.md  showcase1-o1.md  showcase1-o3.md
ai_suite/settings/: llm_settings.py
streamlit/fitness_tracker/: .gitignore  fitness_tracker.py
(+54 files in other folders)
